# GPURecursiveMP

./: CMakeLists.txt  README.md  cholesky.h  main.cu  matrix.h  moore_penrose.h  pinv_cpu.h  strassen_matrix_inv.h
utils/: file_utils.h  functors.h  macros.h  matrix_utils_kernels.h  remove_zero_rows.h  stream_manager.h
